manifest/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular
  template:
    metadata:
      labels:
        app: angular
    spec:
      containers:
      - name: mravily-angular
        image: mravily/angular:parrot
        ports:
          - containerPort: 4200
        resources:
          limits:
            memory: "1Gi"
            cpu: "1000m"
      # Claim PV
      # Try to install package.json
      # Start App 
      # Make access from outside the cluster with NodePort

#---

# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: angular-pv
# spec:
#   capacity:
#     storage: 1Gi
#   volumeMode: Filesystem
#   accessModes:
#     - ReadWriteMany
#   storageClassName: manual
#   nfs:
#     path: /data
#     server: 192.168.64.1
