manifest/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: angular-s
spec:
  type: ClusterIP
  selector:
    app: angular
  ports:
  - port: 80
    targetPort: 4200
    name: angular-s
