manifest/test-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: angular-np
spec:
  type: NodePort
  selector:
    app: angular
  ports:
  - port: 80
    targetPort: 4200
    nodePort: 30001
    name: angular-np
